Reworked arena handling
- Merged all 4 arena types to be default handled by PvPArenaInstance
- Fixed auto grouping for Arena of Harmony; Auto group was often not build
- Removed ARENA_COURAGE_INSIGNIA_COUNT modifier
- Added missing rewards for lower level versions
- Added mostly retail-like reward calculation
- Fixed auto resurrect on round change resulted in a 20% res instead of a full one
- Added missing sys msg for lost points
- Added missing score modifiers in last round
- Fixed incorrect application of score modifiers
- Added missing point limiters
- Added missing instance buff duration by rank
- Fixed instance buff apply/remove
- Fixed ScoreWriter